# DSP-Seed-Browser

./: .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml
rust/: Cargo.toml  main.rs  project.json
rust/data/: planet.rs  random.rs  rule.rs
rust/rules/: luminosity.rs  mod.rs  or.rs
rust/worldgen/: galaxy_gen.rs
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  project.json  tsconfig.json  typed-router.d.ts  uno.config.ts  vite.config.ts
web/src/: App.vue  main.ts
web/src/components/: DestinationForm.vue
web/src/pages/: index.vue
web/src/pages/viewer/: index.vue
web/src/styles/: fonts.css  main.css
